[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/Point.png" type="Texture" id=1]
[ext_resource path="res://Scripts/phonePassword.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PhonePasswordButton.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0

[node name="Telephone" type="Node2D"]

[node name="PasswordPad" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Button0" type="Sprite" parent="PasswordPad"]
position = Vector2( 19, 0 )
texture = ExtResource( 1 )

[node name="Area2D0" type="Area2D" parent="PasswordPad/Button0"]
script = ExtResource( 3 )

[node name="Point0" type="CollisionShape2D" parent="PasswordPad/Button0/Area2D0"]
shape = SubResource( 1 )

[node name="Button1" type="Sprite" parent="PasswordPad"]
position = Vector2( 69, 0 )
texture = ExtResource( 1 )

[node name="Area2D1" type="Area2D" parent="PasswordPad/Button1"]
script = ExtResource( 3 )

[node name="Point1" type="CollisionShape2D" parent="PasswordPad/Button1/Area2D1"]
shape = SubResource( 1 )

[node name="Button2" type="Sprite" parent="PasswordPad"]
position = Vector2( 119, 0 )
texture = ExtResource( 1 )

[node name="Area2D2" type="Area2D" parent="PasswordPad/Button2"]
script = ExtResource( 3 )

[node name="Point2" type="CollisionShape2D" parent="PasswordPad/Button2/Area2D2"]
shape = SubResource( 1 )

[node name="Button3" type="Sprite" parent="PasswordPad"]
position = Vector2( 19, 50 )
texture = ExtResource( 1 )

[node name="Area2D3" type="Area2D" parent="PasswordPad/Button3"]
script = ExtResource( 3 )

[node name="Point3" type="CollisionShape2D" parent="PasswordPad/Button3/Area2D3"]
shape = SubResource( 1 )

[node name="Button4" type="Sprite" parent="PasswordPad"]
position = Vector2( 69, 50 )
texture = ExtResource( 1 )

[node name="Area2D4" type="Area2D" parent="PasswordPad/Button4"]
script = ExtResource( 3 )

[node name="Point4" type="CollisionShape2D" parent="PasswordPad/Button4/Area2D4"]
shape = SubResource( 1 )

[node name="Button5" type="Sprite" parent="PasswordPad"]
position = Vector2( 119, 50 )
texture = ExtResource( 1 )

[node name="Area2D5" type="Area2D" parent="PasswordPad/Button5"]
script = ExtResource( 3 )

[node name="Point5" type="CollisionShape2D" parent="PasswordPad/Button5/Area2D5"]
shape = SubResource( 1 )

[node name="Button6" type="Sprite" parent="PasswordPad"]
position = Vector2( 19, 100 )
texture = ExtResource( 1 )

[node name="Area2D6" type="Area2D" parent="PasswordPad/Button6"]
script = ExtResource( 3 )

[node name="Point6" type="CollisionShape2D" parent="PasswordPad/Button6/Area2D6"]
shape = SubResource( 1 )

[node name="Button7" type="Sprite" parent="PasswordPad"]
position = Vector2( 69, 100 )
texture = ExtResource( 1 )

[node name="Area2D7" type="Area2D" parent="PasswordPad/Button7"]
script = ExtResource( 3 )

[node name="Point7" type="CollisionShape2D" parent="PasswordPad/Button7/Area2D7"]
shape = SubResource( 1 )

[node name="Button8" type="Sprite" parent="PasswordPad"]
position = Vector2( 119, 100 )
texture = ExtResource( 1 )

[node name="Area2D8" type="Area2D" parent="PasswordPad/Button8"]
script = ExtResource( 3 )

[node name="Point8" type="CollisionShape2D" parent="PasswordPad/Button8/Area2D8"]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="PasswordPad"]
points = PoolVector2Array( 0, 0 )
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2
joint_mode = 2
